fix: trying to fix scroll issue on safari iOS

--- a/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
+++ b/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
@@ -4,6 +4,9 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     will-change: scroll-position;
+    animation-name: scroller-overflow-hack;
+    animation-fill-mode: forwards;
+    animation-duration: 1ms;
 }
 
 .virtual-list::-webkit-scrollbar {
@@ -16,4 +19,9 @@
 
 .virtual-list ul.virtual-container li.item {
     @apply flex flex-y;
+}
+
+@keyframes scroller-overflow-hack {
+    0% { opacity: .9999; }
+    100% { opacity: 1; }
 }
